Remove tsup dev dependency

--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/RadicalZephyr/bitburner-scripts/issues"
   },
-  "homepage": "https://github.com/RadicalZephyr/bitburner-scripts#readme",
-  "devDependencies": {
-    "tsup": "^6.1.2"
-  }
+  "homepage": "https://github.com/RadicalZephyr/bitburner-scripts#readme"
 }
