--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES6",
     "module": "ES6",
     "noImplicitAny": true,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "typeRoots": ["typings"]
   },
   "include": ["src/**/*.ts", "src/**/*.js"],
   "exclude": ["node_modules"]
