--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "ES6",
+    "outDir": "dist",
     "noImplicitAny": true,
     "preserveConstEnums": true,
     "typeRoots": ["typings"]
