--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES6",
     "module": "ES6",
     "outDir": "dist",
+    "noEmitHelpers": true,
     "noImplicitAny": true,
     "preserveConstEnums": true,
     "typeRoots": ["typings"]
