--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
+    "target": "ES2021",
+    "module": "ES2020",
     "outDir": "dist",
+    "typeRoots": ["typings"],
+    "allowJS": true,
     "noEmitHelpers": true,
     "noImplicitAny": true,
-    "preserveConstEnums": true,
-    "typeRoots": ["typings"]
+    "preserveConstEnums": true
   },
   "include": ["src/**/*.ts", "src/**/*.js"],
-  "exclude": ["node_modules"]
 }
