--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    outputs:
+      compiled-files: ${{ steps.build.outputs.files }}
+
     strategy:
       matrix:
         node-version: [12.x]
@@ -15,7 +19,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install and Build
+      - name: Install
+        run: npm install
+      - id: build
+        name: Build
         run: |
-          npm install
           npm run build
+          echo "::set-output files=$(find dist/ -type f -name '*.js')"
