--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: "Build"
-    uses: "./.github/workflows/build.yml@main"
+    uses: "./.github/workflows/build.yml"
 
   release:
     name: "Release"
