--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
         description: "A list of all output javascript files"
         value: ${{ jobs.build.compiled-files }}
   push:
+    branches-ignore:
+      - "main"
   pull_request:
 
 jobs:
