--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,18 @@
 name: Build and Test
 
 on:
-  workflow_call:
-    outputs:
-      compiled_files:
-        description: "A list of all output javascript files"
-        value: ${{ jobs.build.compiled_files }}
+  pull_request:
   push:
     branches-ignore:
-      - "main"
-  pull_request:
+      - main
+  workflow_call:
+    outputs:
+      artifact_name:
+        description: Build Artifact Name
+        value: ${{ env.ARTIFACT_NAME }}
+
+env:
+  ARTIFACT_NAME: dist
 
 jobs:
   build:
@@ -30,8 +33,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: npm install
-      - id: build
-        name: Build
+      - name: Build
         run: |
           npm run build
-          echo ::set-output files=\""$(find dist/ -type f -name '*.js' -print0 | tr '\0' ' ')"\"
+      - name: Upload dist
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: |
+            dist
