--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,13 +41,13 @@ jobs:
         shell: bash
         if: github.ref_type == 'branch' && github.ref_name == 'main'
         run: |
-          echo "SCRIPT_VERSION=latest >> $GITHUB_ENV"
+          echo "SCRIPT_VERSION=latest" >> $GITHUB_ENV
           echo "version is: ${{ env.SCRIPT_VERSION }}"
 
       - name: Store the artifact file name in the environment
         shell: bash
         run: |
-          echo "ARTIFACT_FILE=${{ env.ARTIFACT_NAME}}-${{env.SCRIPT_VERSION }}.zip" >> $GITHUB_ENV
+          echo "ARTIFACT_FILE=${{ env.ARTIFACT_NAME }}-${{ env.SCRIPT_VERSION }}.zip" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
       - name: Node.js
