--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
           git config user.name  "Release Script"
           git config user.email "earthlingzephyr@gmail.com"
           git add .
-          git commit -m 'Update to ${{ github.sha }}' || exit
+          git commit -m 'Update to ${{ github.sha }}' || exit 0
           git push origin ${{ env.RELEASE_BRANCH }}
 
       - name: Create README
