--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "My awesome scripts for automating Bitburner",
   "scripts": {
     "clean": "find dist -depth ! -name 'dist' ! -name .gitkeep -delete",
-    "ship-it": "npm run clean ; tsc -p . && bitburner-rsync dist",
-    "build": "tsc",
-    "watch": "while true ; do find src/ | entr -d npm run ship-it ; done"
+    "watch:init": "node build/init.js",
+    "watch:transpile": "tsc -w --preserveWatchOutput",
+    "watch:local": "node build/watch.js",
+    "watch:remote": "bitburner-filesync",
+    "watch:all": "concurrently npm:watch:transpile npm:watch:local npm:watch:remote",
+    "watch": "npm run watch:init && npm run watch:all"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,14 @@
   },
   "homepage": "https://github.com/RadicalZephyr/bitburner-scripts#readme",
   "devDependencies": {
-    "typescript": "^4.7.3"
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "bitburner-filesync": "^1.1.5",
+    "chokidar": "^3.5.3",
+    "concurrently": "^7.4.0",
+    "eslint": "^8.22.0",
+    "fast-glob": "^3.2.12",
+    "sync-directory": "^5.1.7",
+    "typescript": "^4.7.4"
   }
 }
