--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["ES2022"],
     "target": "ES2021",
     "module": "ES2020",
     "moduleResolution": "node16",
