--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
-  "include": ["NetscriptDefinitions.d.ts", "src/**/*.ts", "src/**/*.js"],
+  "include": [
+    "NetscriptDefinitions.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js"
+  ],
   "exclude": ["src/lib/react.ts"],
   "compilerOptions": {
     "lib": ["ES2022"],
