--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "fast-glob": "^3.2.12",
     "sync-directory": "^5.1.7",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "graphology": "^0.26.0"
   }
 }
