Disable source maps and sources in scripts
Bitburner isn't using them so there's no point in including them.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "esModuleInterop": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
+    "inlineSourceMap": false,
+    "inlineSources": false,
     "rootDir": "src/",
     "outDir": "dist/",
     "baseUrl": "src/",
