--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "homepage": "https://github.com/RadicalZephyr/bitburner-scripts#readme",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "bitburner-filesync": "^1.1.5",
     "chokidar": "^3.5.3",
     "concurrently": "^7.4.0",
     "fast-glob": "^3.2.12",
+    "jest": "^30.0.3",
     "sync-directory": "^5.1.7",
     "typescript": "^4.7.4"
   },
