--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fast-glob": "^3.2.12",
     "jest": "^30.0.3",
     "sync-directory": "^5.1.7",
+    "ts-jest": "^29.4.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
