--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
               await ns.wget(baseUrl + file, prefix + file, "home");
             }
           }
-          const baseUrl = "https://raw.githubusercontent.com/RadicalZephyr/bitburner-scripts/${{ env.RELEASE_BRANCH }}/";
+          const baseUrl = "https://github.com/RadicalZephyr/bitburner-scripts/raw/refs/heads/${{ env.RELEASE_BRANCH }}/";
           let files = [
             $FILES
             ""
