--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Create Release
 
 on:
   push:
-    branches:
-      - "main"
+    tags:
+      - "v*.*.*"
 
 env:
   RELEASE_BRANCH: latest-files
