--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,16 +30,16 @@ jobs:
         node-version: [22.x]
 
     steps:
-      - name: Use latest as the release version when building from main branch
+      - name: Use short tag name as the release version when building from a tag
         shell: bash
-        if: github.ref_type == 'branch' && github.ref_name == 'main'
+        if: github.ref_type == 'tag'
         run: |
-          echo "SCRIPT_VERSION=latest" >> $GITHUB_ENV
+          echo "SCRIPT_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
           echo "version is: ${{ env.SCRIPT_VERSION }}"
 
       - name: Store the artifact file name in the environment
         shell: bash
-        if: github.ref_type == 'branch' && github.ref_name == 'main'
+        if: github.ref_type == 'tag'
         run: |
           echo "ARTIFACT_FILE=${{ env.ARTIFACT_NAME }}-${{ env.SCRIPT_VERSION }}.zip" >> $GITHUB_ENV
 
@@ -60,12 +60,12 @@ jobs:
         run: npm exec jest
 
       - name: Package output
-        if: github.ref_type == 'branch' && github.ref_name == 'main'
+        if: github.ref_type == 'tag'
         run: zip ${{ env.ARTIFACT_FILE }} dist/**/*.js dist/*.js
 
       - name: Upload Bitburner Runnable Scripts
         uses: actions/upload-artifact@v4
-        if: github.ref_type == 'branch' && github.ref_name == 'main'
+        if: github.ref_type == 'tag'
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: |
