--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
   },
   "homepage": "https://github.com/RadicalZephyr/bitburner-scripts#readme",
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "bitburner-filesync": "^1.1.5",
     "chokidar": "^4.0.3",
     "concurrently": "^9.2.0",
+    "eslint": "^9.31.0",
     "fast-glob": "^3.2.12",
     "jest": "^30.0.4",
     "sync-directory": "^6.0.5",
     "ts-jest": "^29.4.0",
-    "typescript": "^5.8"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
     "graphology": "^0.26.0"
