--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Lint
+        run: npx eslint src/
+
       - name: Test
         run: npm exec jest
 
