Right now I'm just flailing trying to get things to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
         "types": ["jest"],
         "paths": {
             "/*": ["*"],
-            "netscript": ["../NetScriptDefinitions.d.ts"]
+            "netscript": ["../NetScriptDefinitions.d.ts"],
+            "sodium": ["./src/lib/sodium.js"]
         }
     }
 }
