[lib] Create an import we can use to make sure TSC picks up the global react
I truly have no idea why this is necessary, but this apparently stops
the issue of TSC complaining about:

```
error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
```

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
         "types": ["jest"],
         "paths": {
             "/*": ["*"],
-            "netscript": ["../NetScriptDefinitions.d.ts"],
-            "@react": ["lib/react.ts"]
+            "netscript": ["../NetScriptDefinitions.d.ts"]
         }
     }
 }
