[package.json] Add express.js microframework as a dev dependency

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "chokidar": "^4.0.3",
         "concurrently": "^9.2.0",
         "eslint": "^9.31.0",
+        "express": "^5.1.0",
         "fast-glob": "^3.2.12",
         "jest": "^30.0.4",
         "prettier": "3.6.2",
