--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "watch:local": "node build/watch.js",
         "watch:remote": "bitburner-filesync",
         "watch:all": "concurrently npm:watch:transpile npm:watch:local npm:watch:remote",
-        "watch": "npm run watch:init && npm run watch:all"
+        "watch": "npm run watch:init && npm run watch:all",
+        "gtp-proxy": "node build/gtp-proxy.js"
     },
     "repository": {
         "type": "git",
