[KataGo] Configure KataGo to not resign early

--- a/default_gtp.cfg
+++ b/default_gtp.cfg
@@ -181,7 +181,7 @@ resignConsecTurns = 3
 
 # Disallow resignation if turn number < resignMinMovesPerBoardArea * area of board.
 # e.g 0.25 would prohibit resignation on 19x19 until after turn 361 * 0.25 ~= 90.
-# resignMinMovesPerBoardArea = 0.00
+resignMinMovesPerBoardArea = 0.75
 
 # ------------------------------
 # Handicap
