[KataGo] Completely disallow resignation
We play to the death!

--- a/default_gtp.cfg
+++ b/default_gtp.cfg
@@ -170,7 +170,7 @@ defaultBoardSize = 9
 
 # Resignation occurs if for at least resignConsecTurns in a row, the
 # winLossUtility (on a [-1,1] scale) is below resignThreshold.
-allowResignation = true
+allowResignation = false
 resignThreshold = -0.90
 resignConsecTurns = 3
 
