--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "bitburner-filesync": "^1.1.5",
         "chokidar": "^4.0.3",
         "concurrently": "^9.2.0",
+        "cors": "^2.8.5",
         "eslint": "^9.31.0",
         "express": "^5.1.0",
         "fast-glob": "^3.2.12",
