--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "fast-glob": "^3.2.12",
         "jest": "^30.0.4",
         "morgan": "^1.10.1",
+        "node-notifier": "^10.0.1",
         "prettier": "3.6.2",
         "sync-directory": "^6.0.5",
         "ts-jest": "^29.4.0",
