[AGENTS] Improve agent command execution reliability
Using `npx` is (I believe) the source of the problem with Codex's
transient failure to run jest, eslint and prettier. To solve this we
create scripts definitions for running the installed versions of these
commands which should be available since the setup script runs npm
install and all these commands are in our dependencies.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "My awesome scripts for automating Bitburner",
     "scripts": {
         "build": "tsc",
-        "codex-test": "npx jest --config codex-jest.config.js",
+        "lint": "eslint src/",
+        "codex-test": "jest --config codex-jest.config.js",
+        "format": "prettier --write .",
         "clean": "find dist -depth ! -name 'dist' ! -name .gitkeep -delete",
         "watch:init": "node build/init.js",
         "watch:transpile": "tsc -w --preserveWatchOutput",
